# internal/models/models.go
@@ -7,3 +7,9 @@ type Task struct {
 	Task   string `json:"task"`    // Наш сервер будет ожидать json c полем text
 	IsDone bool   `json:"is_done"` // В GO используем CamelCase, в Json - snake
 }
+
+type User struct {
+	gorm.Model
+	Email    string
+	Password string
+}
